update the file with count down

--- a/index.html
+++ b/index.html
@@ -1,51 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Essential Meta Tags -->
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="robots" content="index, follow" />
-  <meta name="description" content="Arctic44 is currently under construction. We're building something innovative and exciting." />
-  <meta name="keywords" content="Arctic44, under construction, tech startup, software company, arctic ocean" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Initializing Deployment | Arctic44</title>
+
+  <!-- ✅ Favicon -->
+  <link rel="icon" href="favicon.png" type="image/png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon.png" />
+  <link rel="apple-touch-icon" href="favicon.png" />
+
+  <!-- ✅ Canonical URL -->
+  <link rel="canonical" href="https://www.yourdomain.com/" />
+
+  <!-- Load M PLUS 1p Font -->
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@400;500;700;800&display=swap" rel="stylesheet" />
+
+  <!-- ✅ SEO Meta Tags -->
+  <meta name="description" content="A powerful system is initializing... Stay tuned as we deploy something extraordinary." />
+  <meta name="keywords" content="Launching Soon, AI Deployment, Tech Startup, Arctic44, Innovation, Matrix Animation, Net Effect, Countdown, Futuristic Web Design" />
   <meta name="author" content="Arctic44 Team" />
+  <meta name="robots" content="index, follow" />
 
-  <!-- Open Graph -->
+  <!-- ✅ Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:title" content="Initializing Deployment | Arctic44" />
+  <meta property="og:description" content="A powerful system is initializing... Stay tuned as we deploy something extraordinary." />
+  <meta property="og:image" content="https://www.yourdomain.com/assets/preview.jpg" />
+  <meta property="og:url" content="https://www.yourdomain.com/" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Arctic44 – Under Construction" />
-  <meta property="og:description" content="Something cool is coming soon. Stay tuned with Arctic44!" />
-  <meta property="og:url" content="https://arctic44.com/" />
-  <meta property="og:image" content="https://arctic44.com/preview.png" />
 
-  <!-- Twitter Card -->
+  <!-- ✅ Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Arctic44 – Under Construction" />
-  <meta name="twitter:description" content="We're working on something cool. Stay tuned with Arctic44!" />
-  <meta name="twitter:image" content="https://arctic44.com/preview.png" />
+  <meta name="twitter:title" content="Initializing Deployment | Arctic44" />
+  <meta name="twitter:description" content="A powerful system is initializing... Stay tuned as we deploy something extraordinary." />
+  <meta name="twitter:image" content="https://www.yourdomain.com/assets/preview.jpg" />
   <meta name="twitter:site" content="@arctic44" />
 
-  <!-- Favicon -->
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-
-  <!-- Title -->
-  <title>Arctic44 – Under Construction</title>
-
-  <!-- Fonts & Styles -->
-  <link rel="stylesheet" href="style.css" />
+  <!-- ✅ Preconnect for performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://arctic44.com/" />
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-  <div class="wave-bg"></div>
 
-  <div class="content">
-    <h1>Under Construction</h1>
-    <p class="subheading">🌊 Something cool is coming soon</p>
-    <p class="description">We’re working on a wave of innovation. Stay tuned with Arctic44.</p>
+
+<body>
+  <!-- Background Effects -->
+  <canvas id="net"></canvas>
+  <canvas id="matrix"></canvas>
+
+  <!-- Foreground Content -->
+  <div class="container">
+    <h1>Initializing Deployment...</h1>
+    <div id="countdown"></div>
   </div>
+
+  <script src="script.js"></script>
+  <!-- <script src="matrix.js"></script> -->
+  <script src="net.js"></script>
 </body>
 </html>
