--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
   <link rel="apple-touch-icon" href="favicon.png" />
 
   <!-- ✅ Canonical URL -->
-  <link rel="canonical" href="https://www.yourdomain.com/" />
+  <link rel="canonical" href="https://www.arctic44.com/" />
 
   <!-- Load M PLUS 1p Font -->
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@400;500;700;800&display=swap" rel="stylesheet" />
 
   <!-- ✅ SEO Meta Tags -->
-  <meta name="description" content="A powerful system is initializing... Stay tuned as we deploy something extraordinary." />
-  <meta name="keywords" content="Launching Soon, AI Deployment, Tech Startup, Arctic44, Innovation, Matrix Animation, Net Effect, Countdown, Futuristic Web Design" />
+  <meta name="description" content="Arctic44 is crafting next-generation digital solutions. Stay tuned as we initialize our innovative tech ecosystem designed for modern startups and bold thinkers." />
+  <meta name="keywords" content="Arctic44, software development, tech startup, AI solutions, digital transformation, futuristic design, web innovation, matrix animation, startup countdown, under construction" />
   <meta name="author" content="Arctic44 Team" />
   <meta name="robots" content="index, follow" />
 
   <!-- ✅ Open Graph (Facebook, LinkedIn) -->
   <meta property="og:title" content="Initializing Deployment | Arctic44" />
   <meta property="og:description" content="A powerful system is initializing... Stay tuned as we deploy something extraordinary." />
-  <meta property="og:image" content="https://www.yourdomain.com/assets/preview.jpg" />
-  <meta property="og:url" content="https://www.yourdomain.com/" />
+  <meta property="og:image" content="https://www.arctic44.com/assets/preview.jpg" />
+  <meta property="og:url" content="https://www.arctic44.com/" />
   <meta property="og:type" content="website" />
 
   <!-- ✅ Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Initializing Deployment | Arctic44" />
-  <meta name="twitter:description" content="A powerful system is initializing... Stay tuned as we deploy something extraordinary." />
-  <meta name="twitter:image" content="https://www.yourdomain.com/assets/preview.jpg" />
+  <meta name="twitter:description" content="Arctic44 is crafting next-generation digital solutions. Stay tuned as we initialize our innovative tech ecosystem designed for modern startups and bold thinkers." />
+  <meta name="twitter:image" content="https://www.arctic44.com/assets/preview.jpg" />
   <meta name="twitter:site" content="@arctic44" />
 
   <!-- ✅ Preconnect for performance -->
