--- a/index.html
+++ b/index.html
@@ -5,39 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Initializing Deployment | Arctic44</title>
 
-  <!-- ✅ Favicon -->
+  <!--  Favicon -->
   <link rel="icon" href="favicon.png" type="image/png" />
   <link rel="icon" type="image/png" sizes="32x32" href="favicon.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="favicon.png" />
   <link rel="apple-touch-icon" href="favicon.png" />
 
-  <!-- ✅ Canonical URL -->
+  <!--  Canonical URL -->
   <link rel="canonical" href="https://www.arctic44.com/" />
 
   <!-- Load M PLUS 1p Font -->
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@400;500;700;800&display=swap" rel="stylesheet" />
 
-  <!-- ✅ SEO Meta Tags -->
+  <!--  SEO Meta Tags -->
   <meta name="description" content="Arctic44 is crafting next-generation digital solutions. Stay tuned as we initialize our innovative tech ecosystem designed for modern startups and bold thinkers." />
   <meta name="keywords" content="Arctic44, software development, tech startup, AI solutions, digital transformation, futuristic design, web innovation, matrix animation, startup countdown, under construction" />
   <meta name="author" content="Arctic44 Team" />
   <meta name="robots" content="index, follow" />
 
-  <!-- ✅ Open Graph (Facebook, LinkedIn) -->
+  <!--  Open Graph (Facebook, LinkedIn) -->
   <meta property="og:title" content="Initializing Deployment | Arctic44" />
   <meta property="og:description" content="A powerful system is initializing... Stay tuned as we deploy something extraordinary." />
   <meta property="og:image" content="https://www.arctic44.com/assets/preview.jpg" />
   <meta property="og:url" content="https://www.arctic44.com/" />
   <meta property="og:type" content="website" />
 
-  <!-- ✅ Twitter Card -->
+  <!--  Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Initializing Deployment | Arctic44" />
   <meta name="twitter:description" content="Arctic44 is crafting next-generation digital solutions. Stay tuned as we initialize our innovative tech ecosystem designed for modern startups and bold thinkers." />
   <meta name="twitter:image" content="https://www.arctic44.com/assets/preview.jpg" />
   <meta name="twitter:site" content="@arctic44" />
 
-  <!-- ✅ Preconnect for performance -->
+  <!--  Preconnect for performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
@@ -46,13 +46,15 @@
 
 
 <body>
-  <!-- Background Effects -->
+
   <canvas id="net"></canvas>
   <canvas id="matrix"></canvas>
 
-  <!-- Foreground Content -->
   <div class="container">
-    <h1>Initializing Deployment...</h1>
+      <h1 id="deployText">
+        <span class="fill">Initializing</span>
+        <span class="stroke" id="dots">Deployment</span>
+      </h1>
     <div id="countdown"></div>
   </div>
 
